--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
     <head>
         <title>dubis</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        definitivamente calvo.
-        Tchubers Tchubers?
+        <h1 class="titulos">calombus.</h1>
+        <hr>
+        <p class="corpo">eu definitivamente não sei o que eu estou fazendo.</p>
+        <img src="https://i.pinimg.com/originals/5b/80/9c/5b809c565b055ccc4f77ae388e527fa4.png",
+        width="250",height="250",alt="amogus">
     </body>
 </html>
