--- a/rpgdemesa.html
+++ b/rpgdemesa.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-        <title>início</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
-
+        <title>acordes lindos</title>
+        
         <!-- importando o bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-dark">
@@ -19,25 +19,21 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" href="./acordes.html">acordes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" href="./rpgdemesa.html">RPG de mesa</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" href="./joao.html">joao</a>
-                  </li>
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+                  <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
             </div>
         </nav>
-        <h1>menu</h1>
+        <script>
+            function rolard20(){
+                return Math.floor(Math.random() * (20)) + 1;
+            }
+        </script>
+        <h1>RPG de mesa</h1>
         <hr>
-        <p class="corpo">eaí, tudo bem?</p>
-    </body>
+        <button class="corpo" onclick="rolard20()">role um d20</button>
+      </body>
 </html>
