--- a/rpgdemesa.html
+++ b/rpgdemesa.html
@@ -29,11 +29,17 @@
         </nav>
         <script>
             function rolard20(){
-                return Math.floor(Math.random() * (20)) + 1;
+              alert(Math.floor(Math.random() * (20)) + 1);
+            }
+            function rolarDadoCustom(lados){
+              alert(Math.floor(Math.random() * (lados)) + 1);
             }
         </script>
         <h1>RPG de mesa</h1>
         <hr>
         <button class="corpo" onclick="rolard20()">role um d20</button>
+        <br>
+        <input type="text" placeholder="digite um dado customizado" id="dadoCustom">
+        <button class="corpo" onclick="rolarDadoCustom(document.getElementById('dadoCustom').value)">rolar</button>
       </body>
 </html>
